# synchro-server

./: .gitignore  CMakeLists.txt  README.md  main.cpp  server.cpp  server.h  synchro-server.pro
